# julius-baer-side-quest

./: README.md
submissions/my-github-id/: .env.example  pyproject.toml
submissions/my-github-id/scripts/: demo.py
submissions/my-github-id/src/banking_client/: __init__.py  auth.py  client.py  config.py  exceptions.py  logger.py  models.py  utils.py
submissions/my-github-id/src/banking_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
submissions/my-github-id/tests/: conftest.py  test_client.py
